--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@
     --Eggshell: #F3E5D7;
     --Outfit: "Outfit";
     --YoungSerif: "YoungSerif";
+    --white: #fff;
+    --snow: #FFF7FB;
 }
 
 /* GLOBAL STYLES */
@@ -33,8 +35,255 @@ body {
     font-family: var(--Outfit);
     background-color: var(--Eggshell);
     font-size: 16px;
+    padding-top: 123px;
+    padding-bottom: 123px;
 }
 
+.cards {
+    max-width: 736px;
+    width: 100%;
+    padding: 40px;
+    background-color: var(--white);
+    margin: auto;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 40px;
+}
 
+.card-image {
+    width: 100%;
+    height: 300px;
+}
 
+.card-image__photo {
+    border-radius: 12px;
+    object-fit: cover;
+}
 
+.card-body {
+    display: flex;
+    flex-direction: column;
+    row-gap: 32px;
+}
+
+.cards-recipe {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+}
+
+.cards-recipe__headline {
+    font-family: var(--YoungSerif);
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 40px;
+    color: var(--Dark-Charcoal);
+}
+
+.cards-recipe__desc {
+    font-family: var(--Outfit);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: var(--Wenge-Brown);
+}
+
+/* preparation time */
+.preparation-time {
+    background-color: var(--snow);
+    padding: 28px;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+}
+
+.preparation-time__title {
+    color: var(--Dark-Raspberry);
+    font-family: var(--Outfit);
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 100%;
+}
+
+.preparation-time__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+}
+
+.preparation-time__item {
+    display: flex;
+    align-items: center;
+    column-gap: 28px;
+}
+
+.preparation-time__text {
+    color: var(--Wenge-Brown);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.preparation-time__span {
+    font-weight: 700;
+}
+
+/* Ingredients */
+.ingredients {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+}
+
+.ingredients__title {
+    color: var(--Brandy-Red);
+    font-family: var(--YoungSerif);
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.ingredients__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+
+}
+
+.ingredients__item {
+    display: flex;
+    align-items: center;
+    column-gap: 28px;
+}
+
+.ingredients__text {
+    color: var(--Wenge-Brown);
+    font-family: Outfit;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+/* Ingredients */
+/* Site line */
+
+.site__line {
+    width: 100%;
+    height: 1px;
+    background: #E3DDD7;
+}
+
+/* Site Line */
+
+/* Instructions */
+.instructions {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+}
+
+.instructions__title {
+    color: var(--Brandy-Red);
+    font-family: var(--YoungSerif);
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+}
+
+.instructions__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+}
+
+.list-number {
+    color: var(--Brandy-Red);
+    font-family: var(--Outfit);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+}
+
+.instructions__item {
+    display: flex;
+    column-gap: 16px;
+}
+
+.instructions__text {
+    color: var(--Wenge-Brown);
+    font-family: var(--Outfit);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 150%;
+    max-width: 616px;
+    width: 100%;
+}
+
+.instructions__span {
+    font-weight: 700;
+}
+
+/* Instructions */
+
+/* Nutrition */
+.nutrition {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+}
+
+.nutrition__title {
+    color: var(--Brandy-Red);
+    font-family: var(--YoungSerif);
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 100%;
+}
+
+.nutrition__description {
+    color: var(--Wenge-Brown);
+    font-family: var(--Outfit);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.nutrition__tables {
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
+}
+
+.table-info {
+    display: flex;
+    align-items: center;
+    column-gap: 16px;
+    padding-left: 32px;
+    padding-right: 32px;
+}
+
+.table-tex {
+    width: 288px;
+    color: var(--Wenge-Brown);
+    font-family: var(--Outfit);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+
+}
+
+.table-amount {
+    width: 288px;
+    color: var(--Brandy-Red);
+    font-family: var(--Outfit);
+    font-weight: 700;
+    line-height: 24px;
+}
+
+/* Nutrition */
